--- a/ALMSistemas/Partials/Usuario/AddUsuario.html
+++ b/ALMSistemas/Partials/Usuario/AddUsuario.html
@@ -1,32 +1,37 @@
 ﻿<h3>Cadastro de Usuário</h3>
-{{message}}
-
+<span>{{message}}</span>
+<br />
+<br />
 <form name="CadastroUsuario" ng-submit="AddUsuario();">
-    <div>
-        <div>
+
+    <div class="row form-group">
+        <div class="col-md-12">
             <label>Nome</label>
             <input type="text" ng-model="usuario.Nome" required />
         </div>
-        <div>
-            <label>Idade</label>
-            <input type="text" ng-model="usuario.Idade"/>
-        </div>
-        <div>
-            <label>CPF</label>
-            <input type="text" ng-model="usuario.CPF" required/>
-        </div>
-        <div>
-            <label>RG</label>
-            <input type="text" ng-model="usuario.RG" required/>
-        </div>
-
-        <div>
-            <input type="submit" value="submit" ng-disabled="CadastroUsuario.$invalid || status=='running'"/>
-        </div>
-
-        
-
-
     </div>
-
+    <div class="row form-group">
+        <div class="col-md-12">
+            <label>Idade</label>
+            <input type="text" ng-model="usuario.Idade" />
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-md-12">
+            <label>CPF</label>
+            <input type="text" ng-model="usuario.CPF" required />
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-md-12">
+            <label>RG</label>
+            <input type="text" ng-model="usuario.RG" required />
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-md-12">
+            <input class="btn btn-success" type="submit" value="Salvar" ng-disabled="CadastroUsuario.$invalid || status=='running'" />
+            <a href="#!/ListarUsuarios" class="btn btn-secondary">Cancelar</a>
+        </div>        
+    </div>
 </form>
